# llm-social-network

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
src/: __init__.py  run_sim.py
src/agents/: __init__.py  base.py  llm.py  llm_agent.py
src/api/: __init__.py  sim.py
src/core/: __init__.py  db.py  events.py  projections.py  ranking.py
src/kpis/: __init__.py  metrics.py
tests/: __init__.py  conftest.py  test_events.py  test_replay.py  test_timeline_and_actions.py
