[project]
name = "llm-social-network"
version = "0.1.0"
description = "Event-sourced LLM Twitter simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
analysis = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.scripts]
llm-sim = "src.run_sim:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
